hiep up code ls hoa don voi search

--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/DetailSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/DetailSanPham.cshtml
@@ -362,5 +362,9 @@ else
     </tbody>
 
 </table>
-
+<style>
+    a {
+        text-decoration: none;
+    }
+</style>
 <!--new product area start-->
