--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GioHangCuaBan.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GioHangCuaBan.cshtml
@@ -100,5 +100,9 @@
         <!--coupon code area end-->
     </form>
 </div>
-
+<style>
+    a {
+        text-decoration: none;
+    }
+</style>
 <script src="~/js/formatjs.js"></script>
