--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCheckoutCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCheckoutCustomer.cshtml
@@ -27,7 +27,11 @@
           type="text/css">
     @RenderSection("Styles", required: false)
 </head>
-
+<style>
+    a {
+        text-decoration: none;
+    }
+</style>
 <body>
     <!-- Add your site or application content here -->
     <!--pos page start-->
