--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutHoaDonCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutHoaDonCustomer.cshtml
@@ -505,7 +505,7 @@
                                 <ul>
                                     <li><a href="index.html">home</a></li>
                                     <li><i class="fa fa-angle-right"></i></li>
-                                    <li>Hóa đon của tôi</li>
+                                    <li>Hóa đơn của tôi</li>
                                 </ul>
 
                             </div>
