--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml
@@ -604,6 +604,11 @@
             </div>
         </div>
     </div>
+    <style>
+        a {
+            text-decoration: none;
+        }
+    </style>
     <!--footer area end-->
     <!-- all js here -->
     <script src="assets\js\vendor\jquery-1.12.0.min.js"></script>
