--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/Checkout.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/Checkout.cshtml
@@ -244,7 +244,11 @@
         </form>
     </div>
 </div>
-
+<style>
+    a{
+        text-decoration : none;
+    }
+</style>
 <script src="~/js/checkout.js">
     
 
