hiep up code ben HomeController

--- a/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
@@ -92,47 +92,7 @@
                                                 <a href="#"><i class="fa fa-shopping-cart"></i> 2Items - 200.000VND <i
                                                         class="fa fa-angle-down"></i></a>
                                                 <!--mini cart-->
-                                                <div class="mini_cart">
-                                                    <div class="cart_item">
-                                                        <div class="cart_img">
-                                                            <a href="#"><img src="/img/cart/taixuong(1).jpg" alt=""></a>
-                                                        </div>
-                                                        <div class="cart_info">
-                                                            <a href="#">Áo chất rapper</a>
-                                                            <span class="cart_price">100.000VND</span>
-                                                            <span class="quantity">Qty: 1</span>
-                                                        </div>
-                                                        <div class="cart_remove">
-                                                            <a title="Remove this item" href="#"><i
-                                                                    class="fa fa-times-circle"></i></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="cart_item">
-                                                        <div class="cart_img">
-                                                            <a href="#"><img src="/img/cart/taixuong(2).jpg" alt=""></a>
-                                                        </div>
-                                                        <div class="cart_info">
-                                                            <a href="#">Áo mùa summer</a>
-                                                            <span class="cart_price">100.000VND</span>
-                                                            <span class="quantity">Qty: 1</span>
-                                                        </div>
-                                                        <div class="cart_remove">
-                                                            <a title="Remove this item" href="#"><i
-                                                                    class="fa fa-times-circle"></i></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="shipping_price">
-                                                        <span> Shipping </span>
-                                                        <span> 50.000VND </span>
-                                                    </div>
-                                                    <div class="total_price">
-                                                        <span> total </span>
-                                                        <span class="prices"> 150.000VND </span>
-                                                    </div>
-                                                    <div class="cart_button">
-                                                        <a href="checkout.html"> Check out</a>
-                                                    </div>
-                                                </div>
+                                                
                                                 <!--mini cart end-->
                                             </div>
                                         </div>
@@ -161,7 +121,7 @@
                                                                 </div>
                                                             </div>
                                                         </li>
-                                                        <li><a href="shop.html">shop</a>
+                                                        <li><a asp-action="Shop" asp-controller="Home">shop</a>
                                                             <div class="mega_menu jewelry">
                                                                 <div class="mega_items jewelry">
                                                                     <ul>
