--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -188,6 +188,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                                           <th style="display:none">Mã KM</th>
                                           <th style="display:none">IMG</th>
                                           <th style="display:none">Trạng thái</th>
+                                         
 
                                       </tr>
                                   </thead>
@@ -450,12 +451,14 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                     <div class="row section__ align-items-center">
                         <div class="col-md-12" id="thanhtoantaiquay" style="display: none;">
                         <button type="button" class="btn btn-info w-100 payment-button" id="Thanhtoandonhang">
-                                <i class="fa-solid fa-coins fa-2xl" style="color: #de0d0d;"></i>
+                                @* <i class="fa-solid fa-coins fa-2xl" style="color: #de0d0d;"></i> *@
+                                Thanh toán
                             </button>
                         </div>
                         <div class="col-md-12" id="dathangtaiquay" style="display: none; position: relative;">
                         <button type="button" class="btn btn-outline-success w-100 payment-button" id="dathangtaiquay_">
-                                <i class="fa-solid fa-truck-arrow-right fa-xl" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"></i>
+                               @*  <i class="fa-solid fa-truck-arrow-right fa-xl" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"></i> *@
+                               Đặt hàng
                             </button>
                         </div>
                     <div class="col-md-12" style="display:none">
