--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/GetAllUser.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/GetAllUser.cshtml
@@ -43,7 +43,7 @@
 
 <!-- Form hoặc nút lọc -->
 <div class="filter-form">
-    <a class="add-account-btn btn btn-primary" asp-controller="UserManager" asp-action="CreateAnAccount">+ Thêm mới tài khoản</a>
+    <a class="add-account-btn btn btn-primary" asp-controller="UserManager" asp-action="CreateUserAccount">+ Thêm mới tài khoản</a>
 </div>
 
 <table id="tble_ajax" class="table" enctype="multipart/form-data">
