--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -604,7 +604,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <label for="btn_Password ">Password </label>
                         <input id="btn_Password" type="text" class="form-control" maxlength="50" />
                    </div>
-                   <div class="col-md-4">
+                   <div class="col-md-4" style="display:none">
                         <label for="btn_ConfirmPassword">ConfirmPassword</label>
                         <input id="btn_ConfirmPassword" type="text" class="form-control" maxlength="50" />
                    </div>                 
